script: add proper block creation
Signed-off-by: soulr344 <bloodthirstyoff@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title> Jira Kanban Board Clone </title>
+        <link rel="shortcut icon" href="./favicon.png"></head>
         <link rel="stylesheet" href="./styles/style.css">
         <link rel="stylesheet" href="./styles/select.css">
         <link rel="stylesheet" href="./icons/icons.css">
