index: remove useless block
Signed-off-by: soulr344 <bloodthirstyoff@gmail.com>

--- a/index.html
+++ b/index.html
@@ -44,39 +44,18 @@
                         <data style="display: none;" value="summary">This is where the summary is gonna be that's gonna be shown when you tap on the block.</data>
                         <data style="display: none;" value="type">bug</data>
                     </div>
-                    <div class="block">
-                        Some Content
-                    </div>
-                    <div class="block">
-                        Some Content
-                    </div>
-                    <div class="block">
-                        Some Content
-                    </div>
                 </div>
                 <div class="main-container" id="development" ondrop="drop(this, event)" ondragenter="return false" ondragover="return false">
                     <span class="container-title">Selected for Development</span>
-                    <div class="block">
-                        Some Content
-                    </div>
-                    <div class="block">
-                        Some Content
-                    </div>
+                    <!-- BLOCKS GO HERE -->
                 </div>
                 <div class="main-container" id="inprogress" ondrop="drop(this, event)" ondragenter="return false" ondragover="return false">
                     <span class="container-title">In Progress</span>
-                    <div class="block">
-                        Some Content
-                    </div>
-                    <div class="block">
-                        Some Content
-                    </div>
+                    <!-- BLOCKS GO HERE -->
                 </div>
                 <div class="main-container" id="done" ondrop="drop(this, event)" ondragenter="return false" ondragover="return false">
                     <span class="container-title">Done</span>
-                    <div class="block">
-                        Some Content
-                    </div>
+                    <!-- BLOCKS GO HERE -->
                 </div>
             </div>
         </div>
